# OpenAIPoemGen

./: .gitignore  Cargo.toml
src/: ai.rs  constants.rs  main.rs
