[package]
name = "ai-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
do_image_gen = []

[dependencies]
async-openai = "0.1.9"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
rand = "0.8.5"
